deployment/device_deployment.yaml
# Deployment Device
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-device
spec:
  selector:
    matchLabels:
      app: sdci-device
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-device
    spec:
      containers:
      - name: sdci-device-container
        image: 127.0.0.1:5000/device:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
