deployment/gw_finale1_deployment.yaml
# Deployment Gateway i
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-gateway-finale1
spec:
  selector:
    matchLabels:
      app: sdci-gateway-finale1
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-gateway-finale1
    spec:
      containers:
      - name: sdci-gateway-finale1-container
        image: sdci-gateway:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8282
