deployment/gw_inter_deployment.yaml
# Deployment Gateway i
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-gateway-inter
spec:
  selector:
    matchLabels:
      app: sdci-gateway-inter
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-gateway-inter
    spec:
      containers:
      - name: sdci-gateway-inter-container
        image: sdci-gateway:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8181
