deployment/srv_deployment.yaml
# Deployment Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdci-server
spec:
  selector:
    matchLabels:
      app: sdci-server
  replicas: 1
  template:
    metadata:
      labels:
        app: sdci-server
    spec:
      containers:
      - name: sdci-server-container
        image: 127.0.0.1:5000/server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
