deployment/gw_finale1_cluster_ip.yaml
# Service ClusterIP for Gateway i
apiVersion: v1
kind: Service
metadata:
  name: sdci-gateway-finale1-clusterip
spec:
  selector:
    app: sdci-gateway-finale1
  ports:
  - protocol: TCP
    name: http    
    port: 8181
    targetPort: 8181
  type: ClusterIP
