deployment/gw_inter_cluster_ip.yaml
# Service ClusterIP for Gateway i
apiVersion: v1
kind: Service
metadata:
  name: sdci-gateway-inter-clusterip
spec:
  selector:
    app: sdci-gateway-inter
  ports:
  - protocol: TCP
    name: http    
    port: 8181
    targetPort: 8181
  type: ClusterIP
