deployment/srv_cluster_ip.yaml
# Service ClusterIP for Server
apiVersion: v1
kind: Service
metadata:
  name: sdci-server-clusterip
spec:
  selector:
    app: sdci-server
  ports:
  - protocol: TCP
    name: http    
    port: 8080
    targetPort: 8080
  type: ClusterIP
