deployment/srv_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdci-server-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sdci-server-clusterip
            port:
              number: 8080
